fixed overflow issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,18 +38,22 @@ p {
     margin-top:15rem;
     font-size:5rem;
     width:25rem;
+    white-space: nowrap;
 }
 
 #text-1 {
     position:absolute;
     bottom:-15.8rem;
     width:55rem;
+    text-overflow: clip;
 }
 #text-2 {
     position:absolute;
     width:55rem;
+    text-overflow: clip;
 }
 #text-3 {
     position:absolute;
     width:55rem;
+    text-overflow: clip;
 }
